--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: rgb(186, 186, 186);
+    flex-shrink: 0;
 }
 
 #calculator-container {
@@ -29,7 +30,18 @@ body {
     width: 270px;
     height: 80px;
     background-color: aliceblue;
+    flex-wrap: wrap;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-end;
 }
+
+.display {
+    word-wrap: break-word;
+    margin-right: 10px;
+}
+
 
 .row {
     display: flex;
@@ -38,7 +50,7 @@ body {
     gap: 5px
 }
 
-.button {
+button {
     border: 2px solid black;
     flex: 1;
     display: flex;
@@ -49,10 +61,9 @@ body {
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
-    padding: 10px;
-    height: 20px;
+    height: 50px;
     width: 100%;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
